kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${serviceName}
  labels:
    service: ${serviceName}
spec:
  ports:
  - name: http
    port: ${port}
    targetPort: 8080
    protocol: TCP
  selector:
    service: ${serviceName}
